# moemory_analyze

./: CMakeLists.txt  README.md
.github/workflows/: release.yml  tests.yml
scripts/: release.sh
src/: BoundedUniqueQueue.h  HookCallTracker.h  HookManager.cpp  HookManager.h  Logger.h  MemoryAnalyzer.def  MemoryScanner.cpp  MemoryScanner.h  PEDumper.cpp  PEDumper.h  WardenDetector.cpp  WardenDetector.def  WardenDetector.h  WardenScanner.cpp  WardenScanner.h  dllmain.cpp
test/: ManualMapSim.cpp  ManualMapSim.h  core_tests.cpp  injector.cpp  test_app.cpp
